# sm-encoders

./: Cargo.toml  README.md  pyproject.toml
include/: sgn_encoder.h
python/sm_encoders/: __init__.pyi
src/: lib.rs  main.rs
src/arm64/: garbage.rs  mod.rs  registers.rs
src/asm/: assemble.rs  assembler.rs  mod.rs
src/core/: encoder.rs  mod.rs  obfuscation.rs  utils.rs
src/obfuscation/: aarch64.rs  common.rs  mod.rs  x32.rs  x64.rs
src/pipeline/: encode.rs  mod.rs  parser.rs
src/schema/: encoder.rs  x64.rs
src/sgn/: aarch64.rs  c_bindings.rs  encoder.rs  instructions.rs  mod.rs  obfuscate.rs  py_bindings.rs  utils.rs  x32.rs  x64.rs  x64_architecture.rs
src/utils/: mod.rs  randomization.rs
src/x64_arch/: garbage.rs  mod.rs  obfuscation.rs  registers.rs
src/xor_dynamic/: aarch64.rs  encoder.rs  mod.rs  x32.rs  x64.rs
