[package]
name = "sm-encoders"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
byteorder = "1.5.0"
clap = { version = "4.5.39", features = ["derive"] }
dynasmrt = "3.2.0"
rand = "0.9.1"
thiserror = "2.0.12"
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34+deprecated"
pyo3 = { version = "0.23", features = ["extension-module"], optional = true }

[features]
default = []
python = ["pyo3"]

[lib]
name = "sm_encoders"
crate-type = ["cdylib", "staticlib", "rlib"]